[package]
name = "jira_obsidian_sync"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] } # HTTP
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }    # JSON
serde_json = "1.0"
dotenv = "0.15"                                     #.env
regex = "1"                                         # Regex
chrono = "0.4"                                      # Dates
